# armada_behaviors

./: .gitignore  Dockerfile  GPD-install.sh  README.md
.github/workflows/: docker-image.yml  docker.yml  main.yml
armada_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
armada_flexbe_behaviors/manifest/: example_behavior.xml  gazebopickandplace.xml  gpd_get_grasp_waypoints.xml  grippertestbehavior.xml  navigation.xml  pickandplace.xml  state_testing_env.xml  state_type_test.xml  userdataparametertest.xml
armada_flexbe_behaviors/src/armada_flexbe_behaviors/: example_behavior_sm.py  gazebopickandplace_sm.py  gpd_get_grasp_waypoints_sm.py  grippertestbehavior_sm.py  navigation_sm.py  pickandplace_sm.py  state_testing_env_sm.py  userdataparametertest_sm.py
armada_flexbe_states/: CMakeLists.txt  package.xml  setup.py
armada_flexbe_states/src/armada_flexbe_states/: activate_gripper_service_state.py  append_pointcloud_state.py  approach_commander_state.py  calculate_grasp_waypoints_service_state.py  calculate_grasp_waypoints_state.py  cartesian_path_action_state.py  check_bool_state.py  check_gripper_grasp.py  clear_octomap_service_state.py  command_grasp_state.py  concatenate_pointcloud_service_state.py  delete_model_service_state.py  delete_model_state.py  dropoff_commander_state.py  euclidean_cluster_extraction_service_state.py  get_grasp_candidates_service_state.py  get_pointcloud_service_state.py  gpd_grasp_candidates_service_state.py  gpd_grasp_waypoints_service_state.py  grasp_commander_state.py  grasp_waypoints_service_state.py  grasp_waypoints_state.py  gripper_command_action_state.py  gripper_control_state.py  manipulation_handler_state.py  move_arm_action_state.py  move_base_action_state.py  move_base_state.py  obs_start_recording_state.py  obs_stop_recording_state.py  obs_toggle_recording_state.py  pcl_concatenate_pointcloud_service_state.py  pcl_conditional_outlier_removal_service_state.py  pcl_euclidean_cluster_extraction_service_state.py  pcl_passthrough_filter_service_state.py  pcl_plane_segmentation_service_state.py  pcl_radius_outlier_removal_service_state.py  pcl_statistical_outlier_removal_service_state.py  pcl_voxel_grid_filter_service_state.py  perception_handler_state.py  (+18 more)
armada_flexbe_utilities/: CMakeLists.txt  package.xml
armada_flexbe_utilities/action/: CartesianMove.action  ChooseAndPerformGrasp.action  CreateGraspWaypointsList.action  NamedPoseMove.action  PointcloudProcessing.action  SpawnTableCollision.action
armada_flexbe_utilities/cfg/: filter_params.yaml  gen3_moveit_params.yaml  ros_eigen_params.cfg  ur5e_moveit_params.yaml  ur5e_sim_moveit_params.yaml
armada_flexbe_utilities/include/: ArmadaGraspingClass.h  ArmadaManipulationClass.h
armada_flexbe_utilities/launch/: armada_flexbe_pick_and_place.launch  gen3_pick_and_place.launch  passthrough_filter.launch  pick_and_place.launch
armada_flexbe_utilities/msg/: GraspPoses.msg  GraspPosesList.msg
armada_flexbe_utilities/src/actionserver/: armada_manipulation_server.cpp  cartesian_planning_cpp_server.cpp  move_arm_cpp_server.cpp  pointcloud_processing_cpp_server.cpp  r2f85_control_server.cpp
armada_flexbe_utilities/src/class/: ArmadaGraspingClass.cpp  ArmadaManipulationClass.cpp
armada_flexbe_utilities/src/service/: basic_grasp_waypoint_service.cpp  concatenate_pointcloud_service.cpp  euclidean_cluster_extraction_service.cpp  gen_grasp_waypoints.cpp  get_grasp_candidates_service.cpp  get_pointcloud_service.cpp  gpd_grasp_candidates_service.cpp  gpd_grasp_waypoint_service.cpp  gqcnn_grasp_candidates_service.cpp  grasp_waypoint_service.cpp  grasp_waypoint_service.cpp.autosave  move_arm_cartesian_service.cpp  move_arm_named_pose_service.cpp  pcl_concatenate_pointcloud_service.cpp  pcl_conditional_outlier_removal_service.cpp  pcl_euclidean_cluster_extraction_service.cpp  pcl_passthrough_filter_service.cpp  pcl_plane_segmentation_service.cpp  pcl_radius_outlier_removal_service.cpp  pcl_statistical_outlier_removal_service.cpp  pcl_voxel_grid_filter_service.cpp  pointcloud_passthrough_filter_service.cpp  pointcloud_processing_service.cpp  pointcloud_snapshot_service.cpp  sac_segmentation_service.cpp  set_gripper_service.cpp  shake_test_service.cpp  spawn_collision_service.cpp  spawn_table_collision_service.cpp
armada_flexbe_utilities/srv/: BasicGraspWaypoints.srv  CalculateGraspWaypoints.srv  ConcatenatePointCloud.srv  EuclideanClusterExtraction.srv  GPDGraspCandidates.srv  GQCNNGraspCandidates.srv  GenGraspWaypoints.srv  GetGraspCandidates.srv  GetPointCloud.srv  GraspWaypoints.srv  MoveArmCartesian.srv  MoveArmNamedPose.srv  PCLEuclideanClusterExtraction.srv  PCLPlaneSegmentation.srv  PointCloudPassthroughFilter.srv  SetGripperVal.srv  SpawnCollision.srv
sandbox_flexbe_states/: CMakeLists.txt  package.xml  setup.py
sandbox_flexbe_states/src/sandbox_flexbe_states/: param_to_output_key_state.py  read_userdata_state.py  read_write_userdata_state.py  write_userdata_state.py
