<?xml version="1.0"?>
<package format="2">
  <name>armada_flexbe_utilities</name>
  <version>0.0.0</version>
  <description>The armada_flexbe_utilities package</description>
  <maintainer email="brian@todo.todo">brian</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gpd_ros</build_depend>
  <!-- <build_depend>gqcnn</build_depend> -->
  <build_depend>robotiq_2f_gripper_control</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>tinyxml</exec_depend>

  <export>
  </export>
</package>
